# toy-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_zh.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTEXT_COMPRESSION_STRATEGY.md  HERMES_CONTEXT_COMPRESSION.md
examples/: orchestration.py
src/toy_agent/: agent.py  config.py  mcp.py  memory.py  skills.py  subagent.py
src/toy_agent/tools/: __init__.py  file_ops.py  run_bash.py
tests/: conftest.py  echo_server.py  mcp_stdio_server.py  sse_server.py  test_agent.py  test_anthropic_adapter.py  test_context.py  test_cost.py  test_google_adapter.py  test_guardrails.py  test_hooks.py  test_llm_base.py  test_llm_factory.py  test_memory.py  test_openai_adapter.py  test_orchestrator_parallel.py  test_orchestrator_router.py  test_orchestrator_sequential.py  test_planning.py  test_retriever.py  test_skills.py  test_structured_output.py  test_subagent.py
toy_agent/: agent.py  context.py  cost.py  guardrails.py  hooks.py  mcp.py  memory.py  planning.py  retriever.py  subagent.py
toy_agent/llm/: __init__.py  anthropic_adapter.py  base.py  google_adapter.py  openai_adapter.py  protocol.py  types.py
toy_agent/orchestrator/: __init__.py  parallel.py  router.py  sequential.py
toy_agent/tools/: __init__.py  file_ops.py  rag.py  run_bash.py
