[project]
name = "toy-agent"
version = "0.1.0"
description = "a toy agent for learn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "openai>=2.30.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
