[project]
name = "toy-agent"
version = "0.1.0"
description = "A minimal agent implementation to learn agent fundamentals. Python + OpenAI SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "keepmind9"},
]
dependencies = [
    "mcp>=1.6.0",
    "openai>=2.30.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.9.0",
]

[project.urls]
Repository = "https://github.com/keepmind9/toy-agent"
Issues = "https://github.com/keepmind9/toy-agent/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
